style: fix code blocks on smaller screens

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -397,11 +397,10 @@
   }
   .post-content .highlight,
   .post-content pre {
-    margin-left: calc(var(--gap) * -1);
-    margin-right: calc(var(--gap) * -1);
     margin-bottom: 32px;
     background: var(--hljs-bg) !important;
     border-radius: var(--radius);
+    overflow-x: auto;
   }
   .post-content ul pre {
     margin-left: calc(var(--gap) * -2);
